--- a/example/build.gradle
+++ b/example/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'java'
 }
 
-group 'com.x2ge.mqtt'
+group 'com.x2ge.example'
 version '1.0.0-SNAPSHOT'
 
 repositories {
@@ -10,11 +10,11 @@ repositories {
 //        allowInsecureProtocol = true
 //        url "http://192.168.46.167:9191/repository/maven-public/"
 //    }
-    maven { url "https://s01.oss.sonatype.org/content/repositories/snapshots" }
+//    maven { url "https://s01.oss.sonatype.org/content/repositories/snapshots/" }
     mavenCentral()
 }
 
 dependencies {
-    implementation 'io.github.x2ge:netty-mqtt-client:1.0.0-SNAPSHOT'
+    implementation 'io.github.x2ge:netty-mqtt-client:1.0.1'
 }
 
