--- a/example/build.gradle
+++ b/example/build.gradle
@@ -11,10 +11,11 @@ repositories {
 //        url "http://192.168.46.167:9191/repository/maven-public/"
 //    }
 //    maven { url "https://s01.oss.sonatype.org/content/repositories/snapshots/" }
+    maven { url "https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/" }
     mavenCentral()
 }
 
 dependencies {
-    implementation 'io.github.x2ge:netty-mqtt-client:1.0.1'
+    implementation 'io.github.x2ge:netty-mqtt-client:1.0.2'
 }
 
