--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,8 @@ plugins {
 }
 
 group 'io.github.x2ge'
-version '2.0.0'
-//version '1.0.1-SNAPSHOT'
+//version '2.0.0'
+version '2.0.1-SNAPSHOT'
 
 compileJava {
     sourceCompatibility = 1.8
@@ -23,7 +23,8 @@ repositories {
 }
 
 dependencies {
-    implementation 'io.netty:netty-all:4.1.68.Final'
+//    implementation 'io.netty:netty-all:4.1.68.Final'
+    implementation 'io.netty:netty-codec-mqtt:4.1.68.Final'
 }
 
 apply from: 'maven-publish.gradle'
