--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,8 @@ plugins {
 }
 
 group 'io.github.x2ge'
-//version '2.0.0'
-version '2.0.1-SNAPSHOT'
+version '2.0.1'
+//version '2.0.1-SNAPSHOT'
 
 compileJava {
     sourceCompatibility = 1.8
@@ -15,10 +15,12 @@ compileJava {
 }
 
 repositories {
-    maven {
-        allowInsecureProtocol = true
-        url "http://192.168.46.167:9191/repository/maven-public/"
-    }
+//    maven {
+//        allowInsecureProtocol = true
+//        url "http://192.168.46.167:9191/repository/maven-public/"
+//    }
+    google()
+//    jcenter()
     mavenCentral()
 }
 
